# SmartHelmet_Crash-BMS

./: .gitignore  README.md  sdkconfig
Smart-Helmet-System-main/: .gitignore  README.md  circuit_diagram.md
Smart-Helmet-System-main/Communication Module ESP32/: CMakeLists.txt  sdkconfig.defaults
Smart-Helmet-System-main/Communication Module ESP32/main/: CMakeLists.txt  bt_audio.c  bt_audio.h  main.c  uart_stream.c  uart_stream.h
Smart-Helmet-System-main/STM32 ANC Module/: README.md  STM32 ANC Module.ioc  latency_notes.md  stm32 settings.md
Smart-Helmet-System-main/STM32 ANC Module/Audio/Inc/: audio_types.h  ring_buffer.h
Smart-Helmet-System-main/STM32 ANC Module/Audio/Src/: ring_buffer.c
Smart-Helmet-System-main/STM32 ANC Module/Core/Inc/: app_config.h  audio_pipeline.h  buffer_manager.h  latency_measure.h  main.h  pin_config.h  stm32f4xx_it.h  uart_parser.h
Smart-Helmet-System-main/STM32 ANC Module/Core/Src/: adc.c  audio_pipeline.c  buffer_manager.c  dma.c  gpio.c  i2s.c  latency_measure.c  main.c  stm32f4xx_it.c  uart_parser.c  usart.c
Smart-Helmet-System-main/STM32 ANC Module/DSP/Inc/: anc_engine.h  fir_filter.h
Smart-Helmet-System-main/STM32 ANC Module/DSP/Src/: anc_engine.c  fir_filter.c
main/: CMakeLists.txt  battery_monitor.c  battery_monitor.h  bmp581.c  bmp581.h  display_oled.c  display_oled.h  i2c_bus.c  i2c_bus.h  lsm6dso.c  lsm6dso.h  main.c  max30102.c  max30102.h  mmc56x3.c  mmc56x3.h  network_sos.c  network_sos.h  tmp117.c  tmp117.h  uart_comm.c  uart_comm.h
